<resources>
    <string name="app_name">O-Detect</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="prompt_email_or_username">Email / Username</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_finger_sign_in">指紋登入</string>
    <string name="action_sign_in">密碼登入</string>
    <string name="action_sign_up">註冊</string>
    <string name="action_sign_out">登出</string>
    <string name="action_update_password">更換密碼</string>
    <string name="action_update_username">更換名稱</string>
    <string name="profile_email">Email:</string>
    <string name="profile_house_num">溫室數量:</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email or username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="upload_image">+</string>
    <string name="action_profile">帳號</string>
    <string name="action_home">主頁</string>

    <!--DataItemList-->
    <string name="no_data_warning">無資料，馬上新增一筆吧!</string>

    <!--Dialog-->
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>

    <!--上傳圖片進度-->
    <string name="hint1">上傳資料庫中&#8230;</string>
    <string name="hint2">上傳資料庫完成</string>
    <string name="hint3">發送封包中&#8230;</string>
    <string name="hint4">辨識圖片中&#8230;</string>
    <string name="hint5">辨識完成</string>
    <string name="hint6">無法連線Server</string>

    <!--uploadImage-->
    <string name="prompt_plant_name">輸入蘭花名稱</string>
    <string name="result_health">健康</string>
    <string name="result_unhealth">不健康</string>
    <string name="result_house">溫室: %1$d</string>
    <string name="result_plant_name">名稱: %1$s</string>
    <string name="result_date">時間: %1$s</string>

    <!--農場概況-->
    <string name="farm_perfect">植物狀況極佳</string>
    <string name="farm_good">植物狀況良好</string>
    <string name="farm_bad">植物狀況不佳</string>
    <string name="farm_no_plant">快新增第一筆吧</string>

</resources>
