<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:fitsSystemWindows="true"
        tools:context=".ui.login.LoginActivity"
        android:background="@color/colorPrimary">

    <!--Header Layout-->
    <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/footerLayout">

        <ImageView
                android:id="@+id/loginLogo"
                android:src="@mipmap/logo_foreground"
                android:layout_width="180dp"
                android:layout_height="180dp"
                app:layout_constraintBottom_toTopOf="@id/footerLayout"/>

    </LinearLayout>

    <!--Footer Layout-->
    <LinearLayout
            android:id="@+id/footerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="25dp"> <!--最下面放按鈕-->

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/loginCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="380dp"
                style="@style/mediumCardView">

            <GridView
                    android:id="@+id/titleGridView"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:horizontalSpacing="10dp"/>

            <ProgressBar
                    android:id="@+id/loading"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


        </com.google.android.material.card.MaterialCardView>


        <!--
        <Button
                android:id="@+id/login"
                android:enabled="true"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/action_sign_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="570dp"
                app:layout_constraintHorizontal_bias="0.5"/>


        <ProgressBar
                android:id="@+id/loading"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"/>
-->
    </LinearLayout>

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"
            android:textColor="@color/colorLogin"
            android:textColorHint="@color/colorHint"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/colorLogin"
            android:textColorHint="@color/colorHint"
            android:layout_marginBottom="120dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:enabled="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:layout_marginBottom="5dp"
            app:cornerRadius="20dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:gravity="center"
            style="@style/loginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>