<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/titleSignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signInEmailBlock"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">


        <ImageView
                android:id="@+id/signInEmailLogo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@mipmap/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/signInEmailTextLayout"
                app:layout_constraintBottom_toBottomOf="@+id/signInEmailBlock"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInEmailTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                app:layout_constraintStart_toEndOf="@id/signInEmailLogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/signInEmailBlock"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                app:errorEnabled="true"
                android:background="@color/colorSignBackground"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInEmailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:selectAllOnFocus="true">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

     <!--   <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:textColor="@color/colorSign"
                android:textColorHint="@color/colorHint"
                app:layout_constraintStart_toEndOf="@id/signInEmailLogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/signInEmailBlock"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signInPasswordBlock"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/signInEmailBlock">

            <ImageView
                    android:id="@+id/signInPasswordLogo"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@mipmap/lock"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/signInPasswordTextLayout"
                    app:layout_constraintBottom_toBottomOf="@+id/signInPasswordBlock"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="25dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signInPasswordTextLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    app:layout_constraintStart_toEndOf="@id/signInPasswordLogo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/signInPasswordBlock"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="25dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    android:background="@color/colorSignBackground"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signInPasswordText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

         <!--   <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/colorSign"
                    android:textColorHint="@color/colorHint"
                    app:layout_constraintStart_toEndOf="@id/signInPasswordLogo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/signInPasswordBlock"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="25dp"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

   <!-- <com.dd.CircularProgressButton
            android:id="@+id/btnWithText"
            android:layout_width="196dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:cpb_textComplete="@string/action_sign_in"
            app:cpb_textError="@string/action_sign_in"
            app:cpb_textIdle="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="70dp"/>-->

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/fingerSignInButton"
                android:enabled="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/action_finger_sign_in"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                app:cornerRadius="200dp"
                android:textSize="16sp"
                android:padding="10dp"
                android:gravity="center"
                style="@style/loginButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/signInButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:enabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            app:cornerRadius="200dp"
            android:textSize="16sp"
            android:padding="10dp"
            android:gravity="center"
            style="@style/loginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fingerSignInButton"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
